<resources>
    <string name="app_name">Android-011</string>

    <!-- Main Activity -->
    <string name="title_text">Android basics</string>
    <string name="button_calc_text">Calculator</string>
    <string name="button_game_text">Game 2048</string>
    <string name="button_chat_text">The Chat</string>

    <!-- Game 2048 Activity -->
    <string name="game_title">2048</string>
    <string name="game_description">Join the numbers and get to 2048</string>
    <string name="game_score">score\n%s</string>
    <string name="game_best_score">best\n%s</string>
    <string name="game_new_btn">new</string>
    <string name="game_undo_btn">undo</string>
    <string name="game_win_dialog_title">You win!</string>
    <string name="game_win_dialog_message">You collect 2048 and win!\nDo you want to continue?</string>
    <string name="game_yes_dialog_button">Yes</string>
    <string name="game_new_dialog_button">New game</string>
    <string name="game_exit_dialog_button">Close</string>
    <string name="game_over_dialog_title">You loose!</string>


    <!-- Calc Activity -->
    <string name="calc_square_history">(%s)² =</string>
    <string name="calc_inverse_history">\u215F\u200A(%s) =</string>
    <string name="calc_error_parse">Argument parse error</string>
    <string name="calc_error_zero">Division by zero</string>
    <string name="calc_error_sqrt">Negative under root</string>
    <string name="calc_btn_percent_text">%</string>
    <string name="calc_btn_ce_text">CE</string>
    <string name="calc_btn_clear_text">C</string>
    <string name="calc_btn_backspace_text">\u232B</string>
    <string name="calc_btn_inverse_text">\u00b9\u2044\u2093</string>
    <string name="calc_btn_square_text">x\u00B2</string>
    <string name="calc_btn_sqrt_text">\u221A\u2093</string>
    <string name="calc_btn_divide_text">\u00F7</string>
    <string name="calc_btn_multiplication_text">\u2715</string>
    <string name="calc_btn_minus_text">\u2212</string>
    <string name="calc_btn_plus_text">\uFF0B</string>
    <string name="calc_btn_plus_minus_text">\u207A\u2215\u208B</string>
    <string name="calc_btn_comma_text">,</string>
    <string name="calc_btn_equal_text">\uFF1D</string>
    <string name="calc_btn_0_text">\u0298</string>
    <string name="calc_btn_1_text">1</string>
    <string name="calc_btn_2_text">2</string>
    <string name="calc_btn_3_text">3</string>
    <string name="calc_btn_4_text">4</string>
    <string name="calc_btn_5_text">5</string>
    <string name="calc_btn_6_text">6</string>
    <string name="calc_btn_7_text">7</string>
    <string name="calc_btn_8_text">8</string>
    <string name="calc_btn_9_text">9</string>
    <string name="calc_minus_sign">\u2212</string>

    <!-- Chat activity -->
    <string name="chat_channel_name">Chat notification channel</string>
    <string name="chat_channel_description">Android-011 App. Chat notification channel</string>
</resources>
