<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/game_layout"
    tools:context=".GameActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="3dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.02">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/game_bg_2048"
            android:gravity="center"
            android:text="2048"
            android:textColor="@color/game_fg_2048"
            android:textSize="32sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/game_bg_4096"
                    android:gravity="center"
                    android:paddingVertical="7dp"
                    android:textAllCaps="true"
                    android:textColor="@color/game_fg_4096"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="score\n69.6k"/>

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/game_bg_4096"
                    android:gravity="center"
                    android:paddingVertical="7dp"
                    android:textAllCaps="true"
                    android:textColor="@color/game_fg_4096"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    tools:text="best\n69.6k"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/game_bg_64"
                    android:gravity="center"
                    android:text="@string/game_new_btn"
                    android:textColor="@color/game_fg_64"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    style="?android:attr/buttonBarButtonStyle" />

                <Button
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="3dp"
                    android:layout_weight="1"
                    android:background="@color/game_bg_64"
                    android:gravity="center"
                    android:text="@string/game_undo_btn"
                    android:textColor="@color/game_fg_64"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:backgroundTint="@null"
                    style="?android:attr/buttonBarButtonStyle" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/game_description"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.048" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:background="@color/game_field_bg"
        android:padding="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.57"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832">
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/GameCell_0"
                tools:text="0"/>
            <TextView
                style="@style/GameCell_2"
                tools:text="2"/>
            <TextView
                style="@style/GameCell_4"
                tools:text="4"/>
            <TextView
                style="@style/GameCell_8"
                tools:text="8"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/GameCell_16"
                tools:text="16"/>
            <TextView
                style="@style/GameCell_32"
                tools:text="32"/>
            <TextView
                style="@style/GameCell_64"
                tools:text="64"/>
            <TextView
                style="@style/GameCell_128"
                tools:text="128"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/GameCell_256"
                tools:text="256"/>
            <TextView
                style="@style/GameCell_512"
                tools:text="512"/>
            <TextView
                style="@style/GameCell_1024"
                tools:text="1024"/>
            <TextView
                style="@style/GameCell_2048"
                tools:text="2048"/>
        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
            <TextView
                style="@style/GameCell_4096"
                tools:text="4096"/>
            <TextView
                style="@style/GameCell_4096"
                tools:text="8192"/>
            <TextView
                style="@style/GameCell_4096"
                tools:text="4096"/>
            <TextView
                style="@style/GameCell_4096"
                tools:text="8192"/>
        </TableRow>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>